assets/css/style.css
/* GOOGLE FONT */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');

/* Root Values */
:root{
    --primary-color: #4335DE;
    --dark-color: #02033B;
    --light-bg: #F3F8FF;
    --white-color: #ffffff;
}

/* Defualt */
body{
    font-family: 'Inter', sans-serif;
    overflow-x: hidden;
    margin: 0;
    padding: 0;
}
/* Main header */
.main-header{
    position: relative;
    background-color: #F3F8FF;
}
/* Top Gradient */
.header-gradient{
    position: absolute;
    left: 0;
    top: 51px;

    width: 100%;
    height: 51px;

    background: linear-gradient(
        0deg,
        #E7EFFA 0%,
        rgba(255,255,255,0) 100%
    );

    z-index: 0;
}
/* Navbar */
.navbar{
    position: relative;
    z-index: 10;

    padding-top: 24px;
    padding-bottom: 24px;

    background-color: transparent;
}
/* Container */
.navbar .container{
    max-width: 1440px;

    padding-left: 120px;
    padding-right: 120px;

    display: flex;
    align-items: center;
    justify-content: space-between;
}
/* Logo */
.navbar-brand{
    margin: 0;
    padding: 0;
}

.navbar-brand img{
    width: 157px;
    height: auto;
    display: block;
}
/* Links */
.navbar-nav{
    display: flex;
    align-items: center;
    gap: 48px;
}
.nav-link{
    position: relative;

    color: #02033B !important;

    font-size: 19px;
    font-weight: 700;
    line-height: 25px;

    padding: 0 !important;

    transition: 0.3s ease;
}
.active-link{
    font-weight: 800;
}
.nav-link:hover{
    color: #4335DE !important;
}
/* Sign in Button */
.nav-item:last-child .nav-link{
    background-color: #4335DE;

    color: white !important;

    padding: 16px 22px !important;

    border-radius: 42px;

    font-size: 16px;
    font-weight: 700;

    line-height: normal;

    transition: 0.3s ease;
}

.nav-item:last-child .nav-link:hover{
    background-color: #2e22c0;
    color: white !important;
}
.navbar-toggler{
    border: none;
    box-shadow: none !important;
    padding: 0;
}
/* Open on Tablet */
@media (max-width: 991px){

    .navbar .container{
        padding-left: 40px;
        padding-right: 40px;
    }

    .navbar-nav{
        gap: 24px;
        padding-top: 30px;

        align-items: flex-start !important;
    }

    .nav-item:last-child .nav-link{
        margin-top: 10px;
    }

}
/* Open on mobile */
@media (max-width: 576px){

    .navbar{
        padding-top: 18px;
        padding-bottom: 18px;
    }

    .navbar .container{
        padding-left: 20px;
        padding-right: 20px;
    }

    .navbar-brand img{
        width: 130px;
    }

    .navbar-nav{
        gap: 18px;
    }

    .nav-link{
        font-size: 17px;
    }

    .nav-item:last-child .nav-link{
        width: 100%;
        text-align: center;
    }

}
/* Hero Section */
.hero-section{
    background-color: #F3F8FF;
    padding: 90px 0;
    overflow: hidden;
    position: relative;
}
.hero-circle{

    position: absolute;

    width: 1770px;
    height: 1770px;

    left: -850%;
    top: -850%;
    opacity: 0.5;
    transform: translate(-50%, -50%);

    z-index: 0;

   
}

/* LEFT SIDE */

.hero-left{
    padding-right: 0px;
    position: relative;
    z-index: 2;
}
.hero-right{
    position: relative;
    z-index: 2;
}

.hero-title{
    font-family: Inter;
font-weight: 800;
font-style: Extra Bold;
font-size: 60px;
line-height: 75px;
letter-spacing: -1.2px;
vertical-align: middle;

}

.hero-text{
    font-size: 20px;
    line-height: 1.7;
    color: #4A4D70;
    margin-bottom: 40px;
    max-width: 580px;
}

/* BUTTONS */

.hero-buttons{
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
}

.btn-primary-custom{
    background-color: #FFC247;
    color: #02033B;
    padding: 18px 30px;
    border-radius: 50px;
    font-weight: 700;
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    gap: 10px;
}

.btn-primary-custom:hover{
    color: #02033B;
}
/* icon container */
.button-arrow {
    width: 20px;
    height: 13.5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* PNG icon */
.button-arrow img {
    width: 100%;
    height: 100%;
    display: block;
}

.btn-secondary-custom{
    border: 2px solid #02033B;
    color: #02033B;
    padding: 18px 30px;
    border-radius: 50px;
    font-weight: 700;
    text-decoration: none;
}

.btn-secondary-custom:hover{
    color: #02033B;
}

/* RIGHT SIDE */

.hero-right{
    display: flex;
    justify-content: center;
}

.hero-image-wrapper{
    position: relative;
    width: 540px;
    height: 620px;
}

.purple-box{
position: absolute;
left: -21.59px;
right: -200px;
top: -25.19px;
bottom: 3.59px;

background: #4335DE;

}

/* BACKGROUND IMAGE */

.hero-bg{
position: absolute;
left: 0px;
right: 0px;
top: 0px;
bottom: 0px;

background: url(.png);

}

/* PHONE IMAGE */

.hero-phone{
position: absolute;
height: 461.25px;
left: 0px;
right: 0px;
top: calc(50% - 461.25px/2);

background: url(.png);

}
@media(max-width:991px){

    .hero-section{
        padding: 70px 0;
        text-align: center;
    }

    .hero-title{
        font-size: 52px;
    }

    .hero-text{
        max-width: 100%;
    }

    .hero-buttons{
        justify-content: center;
    }

    .hero-right{
        margin-top: 60px;
    }

    .hero-image-wrapper{
        width: 450px;
        height: 500px;
    }

    .hero-phone{
        width: 240px;
    }

}

@media(max-width:576px){

    .hero-title{
        font-size: 38px;
    }

    .hero-text{
        font-size: 16px;
    }

    .hero-buttons a{
        width: 100%;
        justify-content: center;
    }

    .hero-image-wrapper{
        width: 100%;
        height: 420px;
    }

    .hero-phone{
        width: 200px;
    }

}
/* Testimonial Section */

.testimonials-top{
   background: linear-gradient(180deg, #F7C95F 0%, #FDB235 100%);
    padding: 110px 0 80px;
}
/* ... */

